--- a/src/index.css
+++ b/src/index.css
@@ -25,6 +25,13 @@
   --success: #008000;
 }
 
+.theme-dracula {
+  --bg: #282a36;      
+  --text: #f8f8f2;    
+  --accent: #bd93f9;  
+  --success: #50fa7b; 
+}
+
 body {
   margin: 0;
 }
