fix "help" styiling

--- a/src/App.css
+++ b/src/App.css
@@ -59,11 +59,14 @@
 .output-block {
   display: block;
   white-space: pre;
-  display: flex;
 }
 
 .output-block span {
   display: block;
+}
+
+.output-flex {
+  display: flex;
 }
 
 .preview {
